Refactor to use Java 21 APIs
* SequencedCollection: getFirst/getLast, addFirst/removeFirst
* URI.create(String).toURL()