@@ -318,7 +318,7 @@ public class JdbcScimUserProvisioning extends AbstractQueryable<ScimUser>
     public String extractPhoneNumber(final ScimUser user) {
         String phoneNumber = null;
         if (user.getPhoneNumbers() != null && !user.getPhoneNumbers().isEmpty()) {
-            phoneNumber = user.getPhoneNumbers().get(0).getValue();
+            phoneNumber = user.getPhoneNumbers().getFirst().getValue();
         }
         return phoneNumber;
     }
