@@ -38,10 +38,10 @@ class JdbcAuditServiceTests {
         auditService.log(getAuditEvent(UserAuthenticationFailure, "1", "joe"), getAuditEvent(UserAuthenticationFailure, "1", "joe").getIdentityZoneId());
         List<AuditEvent> events = auditService.find("1", 0, IdentityZone.getUaaZoneId());
         assertThat(events).hasSize(2);
-        assertThat(events.get(0).getPrincipalId()).isEqualTo("1");
-        assertThat(events.get(0).getData()).isEqualTo("joe");
-        assertThat(events.get(0).getOrigin()).isEqualTo("1.1.1.1");
-        assertThat(events.get(0).getIdentityZoneId()).isEqualTo(IdentityZone.getUaaZoneId());
+        assertThat(events.getFirst().getPrincipalId()).isEqualTo("1");
+        assertThat(events.getFirst().getData()).isEqualTo("joe");
+        assertThat(events.getFirst().getOrigin()).isEqualTo("1.1.1.1");
+        assertThat(events.getFirst().getIdentityZoneId()).isEqualTo(IdentityZone.getUaaZoneId());
     }
 
     @Test
@@ -49,9 +49,9 @@ class JdbcAuditServiceTests {
         auditService.log(getAuditEvent(PrincipalAuthenticationFailure, "clientA"), getAuditEvent(PrincipalAuthenticationFailure, "clientA").getIdentityZoneId());
         List<AuditEvent> events = auditService.find("clientA", 0, IdentityZone.getUaaZoneId());
         assertThat(events).hasSize(1);
-        assertThat(events.get(0).getPrincipalId()).isEqualTo("clientA");
-        assertThat(events.get(0).getOrigin()).isEqualTo("1.1.1.1");
-        assertThat(events.get(0).getIdentityZoneId()).isEqualTo(IdentityZone.getUaaZoneId());
+        assertThat(events.getFirst().getPrincipalId()).isEqualTo("clientA");
+        assertThat(events.getFirst().getOrigin()).isEqualTo("1.1.1.1");
+        assertThat(events.getFirst().getIdentityZoneId()).isEqualTo(IdentityZone.getUaaZoneId());
     }
 
     @Test
