@@ -162,7 +162,7 @@ class OpenSaml4AuthenticationProviderUnitTests {
         Assertion assertion = assertion();
         assertion.getSubject()
                 .getSubjectConfirmations()
-                .get(0)
+                .getFirst()
                 .getSubjectConfirmationData()
                 .setNotOnOrAfter(Instant.now().minus(Duration.ofDays(3)));
         response.getAssertions().add(signed(assertion));
@@ -384,7 +384,7 @@ class OpenSaml4AuthenticationProviderUnitTests {
         Saml2AuthenticationToken token = token(response, verifying(registration()));
         Authentication authentication = this.provider.authenticate(token);
         Saml2AuthenticatedPrincipal principal = (Saml2AuthenticatedPrincipal) authentication.getPrincipal();
-        TestCustomOpenSamlObjects.CustomOpenSamlObject address = (TestCustomOpenSamlObjects.CustomOpenSamlObject) principal.getAttribute("Address").get(0);
+        TestCustomOpenSamlObjects.CustomOpenSamlObject address = (TestCustomOpenSamlObjects.CustomOpenSamlObject) principal.getAttribute("Address").getFirst();
         assertThat(address.getStreet()).isEqualTo("Test Street");
         assertThat(address.getStreetNumber()).isEqualTo("1");
         assertThat(address.getZIP()).isEqualTo("11111");
@@ -527,7 +527,7 @@ class OpenSaml4AuthenticationProviderUnitTests {
     @Test
     void createDefaultAssertionValidatorWhenAssertionThenValidates() {
         Response response = TestOpenSamlObjects.signedResponseWithOneAssertion();
-        Assertion assertion = response.getAssertions().get(0);
+        Assertion assertion = response.getAssertions().getFirst();
         OpenSaml4AuthenticationProvider.AssertionToken assertionToken = new OpenSaml4AuthenticationProvider.AssertionToken(
                 assertion, token());
         assertThat(
@@ -714,7 +714,7 @@ class OpenSaml4AuthenticationProviderUnitTests {
                 XSDateTime.TYPE_NAME);
         registeredDate.setValue(Instant.parse("1970-01-01T00:00:00Z"));
         registeredDateAttr.getAttributeValues().add(registeredDate);
-        attributeStatements.iterator().next().getAttributes().add(registeredDateAttr);
+        attributeStatements.getFirst().getAttributes().add(registeredDateAttr);
         return attributeStatements;
     }
 
