@@ -90,7 +90,7 @@ class ForcedPasswordChangeIT {
                 new HttpEntity<>(headers), Map.class, userEmail);
         Map results = response.getBody();
         assertThat((Integer) results.get("totalResults")).as("There should be more than zero users").isPositive();
-        Map firstUser = (Map) ((List) results.get("resources")).get(0);
+        Map firstUser = (Map) ((List) results.get("resources")).getFirst();
         userId = (String) firstUser.get("id");
     }
 
